Crash - Using Smooth weight tool #52639

Closed
opened 2017-09-03 16:57:26 +02:00 by Bryan Pritchard · 6 comments

System Information
windows 10
Nvidia 970
32GB RAM
Intel i7 5820k

Blender Version
Broken: 2.79 RC2 7b397cd
Worked: (optional)

Blender will crash to desktop, with no description of error when using the SMOOTH weight tool on selected weights.

Exact steps for others to reproduce the error

  1. In weight mode on bound mesh, select a range of vertices so SMOOTH becomes available in the Weight Tools panel
  2. Select the weight you wish to smooth
  3. Set Options as follow
   a) Subset - Active Group
   b) Source Only Selected
  1. Scale factor until crash

I've noticed that while its not 100% repeatable it does happy quite often even on a relatively simple mesh.

**System Information** windows 10 Nvidia 970 32GB RAM Intel i7 5820k **Blender Version** Broken: 2.79 RC2 7b397cd Worked: (optional) Blender will crash to desktop, with no description of error when using the SMOOTH weight tool on selected weights. **Exact steps for others to reproduce the error** 1) In weight mode on bound mesh, select a range of vertices so SMOOTH becomes available in the Weight Tools panel 2) Select the weight you wish to smooth 3) Set Options as follow ``` a) Subset - Active Group b) Source Only Selected ``` 4) Scale factor until crash I've noticed that while its not 100% repeatable it does happy quite often even on a relatively simple mesh.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @BryanPritchard

Added subscriber: @BryanPritchard

Added subscriber: @mont29

Added subscriber: @mont29

Please follow our submission template and guidelines, also read these tips about bug reports, and make a complete, valid bug report, with required info, precise description of the issue, precise steps to reproduce it, small and simple .blend and/or other files to do so if needed, etc.

Please follow our [submission template and guidelines](https:*developer.blender.org/maniphest/task/edit/form/1/), also read [these tips about bug reports](https:*wiki.blender.org/index.php/Dev:Doc/Process/Bug_Reports), and make a complete, valid bug report, with required info, precise description of the issue, precise steps to reproduce it, **small and simple** .blend and/or other files to do so if needed, etc.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by 5f7de54243

This issue was referenced by 5f7de54243f0a07b080d01122bd982af78e4201b
Sign in to join this conversation.
4 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#52639
No description provided.