Fix T52639: Weight paint smooth tool crash